log

Sat Mar 12 16:12:04 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1a1e5d0
Sat Mar 12 16:14:39 HSP 2022: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'crearVector':
exercises.c:76:27: error: 'nuevoVector' is used uninitialized in this function [-Werror=uninitialized]
    nuevoVector->capacidad = n;
    ~~~~~~~~~~~~~~~~~~~~~~~^~~
cc1.exe: all warnings being treated as errors
Compilation failed
5bc84e1
Sat Mar 12 16:15:08 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
46a8a14
Sat Mar 12 16:17:12 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function 'crearVector':
exercises.c:76:22: error: 'nuevoVector' is used uninitialized in this function [-Werror=uninitialized]
    nuevoVector->datos=(int*) calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
322289b
Sat Mar 12 16:18:04 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7cb5e7e
Sat Mar 12 16:22:15 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:76:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    nuevoVector=(int*) calloc(n,sizeof(int));
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
ec139fb
Sat Mar 12 16:25:17 HSP 2022: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:76:23: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    *nuevoVector->datos=NULL;
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
ff91f11
Sat Mar 12 16:25:41 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8d0f36d
Sat Mar 12 16:28:14 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d46e39b
Sat Mar 12 16:29:27 HSP 2022: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
f60ba50
Sat Mar 12 16:38:32 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
dea2ba3
Sat Mar 12 16:43:32 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe1bbb3
Sat Mar 12 16:45:32 HSP 2022: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
987b1be
Sat Mar 12 16:47:30 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|4
total_score: 30/70
011f5eb
Sat Mar 12 16:51:52 HSP 2022: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|3
total_score: 40/70
966b04c
Sat Mar 12 17:06:06 HSP 2022: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  6|2
total_score: 50/70
32cedd9
Sat Mar 12 17:20:10 HSP 2022: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
a001f36
Sat Mar 12 17:31:05 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:41:23: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
    *suma=(a+posInicial,m);
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
afdc758
